22.4.2013 git
- implementing navigation with frames

21.4.2013 git
- adding two webpages on http://deltasql.sf.net : try online and download. adding some testimonials and screenshots to pepper it up.

20.4.2013 git
- improving deltasql website on deltasql.sf.net (table layout)

18.4.2013 git
- docu cleanup and removal of parameter involved in statistics collection

*******************************
1.6.0 Release Notes (17.4.2013)
 
  New features:  timing of synchronization script generation and of some key PHP pages
                 deltaclient compiled for Linux (Gnome and Unity)
                 export project as XML or HTML to avoid vendor (=deltasql) lock-in
                                  
  Fixes:         colored diffs of scripts works in any browser
                 refactoring utility library to increase rendering speed
                 removing some dead code (google gadget and phone home functionality)
                 increased wideness of script's title                
                 
  Documentation: two new FAQ entries about stable releases and how to install patches
                 added documentation on how to install deltaclient on Linux  
                  
*******************************

16.4.2013 git
- adding advanced topic: how to compile deltaclient on Linux
- doc: updating directory structure

15.4.2013 Patch 4 for 1.5.5: list script view has problems displaying table, when coloring row option is disabled
- bugfixes in install routine
- testing the key features of new release
- testing the workflow to have the first sync (add module, add project, link module to project, insert script, do sync)
- reorganizing sections in FAQ, adding new question about running deltasql outside intranet
- updating manual
- removing usage_stats.inc.php and dropping tbstats table from schema, as they are unused
- bugfix in list_scripts.php if coloring row is disabled

8.4.2013 Patch 3 for 1.5.5: url fix for deltaclient

6.4.2013 git