@@ -21,7 +21,7 @@ if(isset($_SESSION['rights'])) {
   $rights = $_SESSION["rights"];
 } else $rights=0;
 ?>
-<h4>Database modules</h4>
+<h2>Modules</h2>
 <table border="1">
 
 <?php
