@@ -1,5 +1,8 @@
 22.4.2013 git
 - implementing navigation with frames
+- unifying title height
+- TODO: drop unused "show deltasql clients on main page" option
+- TODO: understand why copy & paste does not work
 
 21.4.2013 git
 - adding two webpages on http://deltasql.sf.net : try online and download. adding some testimonials and screenshots to pepper it up.
